Fixed: Don't distort author images in search bar results

--- a/frontend/src/Components/Page/Header/AuthorSearchResult.css
+++ b/frontend/src/Components/Page/Header/AuthorSearchResult.css
@@ -7,6 +7,7 @@
 .poster {
   width: 35px;
   height: 35px;
+  object-fit: contain;
 }
 
 .titles {
